# dynamodb_testbed

./: CMakeLists.txt  README.md  get_items.cpp  put_items.cpp
